Project

General

Profile

Actions

Bug #65883

closed

reef: mon: failed ceph_assert(m_paxos->is_plugged())

Added by Patrick Donnelly 11 days ago. Updated 10 days ago.

Status:
Resolved
Priority:
Immediate
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    -3> 2024-05-09T04:49:33.044+0000 7f2620e00700 10 mon.a@0(leader).mds e1122 preprocess_query mon_command({"prefix": "fs swap", "fs1_name": "cephfs", "fs1_id": 148, "fs2_name": "testcephfs2", "fs2_id": 149, "swap_fscids": "yes", "yes_i_really_mean_it": true} v 0) v1 from client.? 172.21.15.28:0/1143145556
    -2> 2024-05-09T04:49:33.044+0000 7f2620e00700  7 mon.a@0(leader).mds e1122 prepare_update mon_command({"prefix": "fs swap", "fs1_name": "cephfs", "fs1_id": 148, "fs2_name": "testcephfs2", "fs2_id": 149, "swap_fscids": "yes", "yes_i_really_mean_it": true} v 0) v1
    -1> 2024-05-09T04:49:33.046+0000 7f2620e00700 -1 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/18.2.2-1322-gd21e4f96/rpm/el8/BUILD/ceph-18.2.2-1322-gd21e4f96/src/mon/FSCommands.cc: In function 'virtual int SwapFilesystemHandler::handle(Monitor*, FSMap&, MonOpRequestRef, const cmdmap_t&, std::ostream&)' thread 7f2620e00700 time 2024-05-09T04:49:33.044493+0000
/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/18.2.2-1322-gd21e4f96/rpm/el8/BUILD/ceph-18.2.2-1322-gd21e4f96/src/mon/FSCommands.cc: 1304: FAILED ceph_assert(m_paxos->is_plugged())

 ceph version 18.2.2-1322-gd21e4f96 (d21e4f961318b56f0d915caa2490c3711bf13c34) reef (stable)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x135) [0x7f26370b6e99]
 2: /usr/lib64/ceph/libceph-common.so.2(+0x2b705f) [0x7f26370b705f]
 3: (SwapFilesystemHandler::handle(Monitor*, FSMap&, boost::intrusive_ptr<MonOpRequest>, std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<void>, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > > const&, std::ostream&)+0xd54) [0x556f826106f4]
 4: (MDSMonitor::prepare_command(boost::intrusive_ptr<MonOpRequest>)+0x998) [0x556f825f1278]
 5: (MDSMonitor::prepare_update(boost::intrusive_ptr<MonOpRequest>)+0x1ee) [0x556f825fa98e]
 6: (PaxosService::dispatch(boost::intrusive_ptr<MonOpRequest>)+0x2ce) [0x556f82515e5e]
 7: (Monitor::handle_command(boost::intrusive_ptr<MonOpRequest>)+0x1f09) [0x556f823c2c89]
 8: (Monitor::dispatch_op(boost::intrusive_ptr<MonOpRequest>)+0xa55) [0x556f823c6e85]
 9: (Monitor::_ms_dispatch(Message*)+0x406) [0x556f823c7e06]
 10: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x5d) [0x556f823f948d]
 11: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x478) [0x7f26373346a8]
 12: (DispatchQueue::entry()+0x50f) [0x7f263733184f]
 13: (DispatchQueue::DispatchThread::entry()+0x11) [0x7f26373f9631]
 14: /lib64/libpthread.so.0(+0x81cf) [0x7f26330081cf]
 15: clone()

/teuthology/pdonnell-2024-05-09_01:40:47-fs:functional-wip-pdonnell-testing-20240508.150423-reef-distro-default-smithi/7699443/remote/smithi028/log/ceph-mon.a.log.gz


Related issues 1 (0 open1 closed)

Related to Ceph QA - QA Run #65856: wip-pdonnell-testing-20240508.150423-reefQA ClosedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly 11 days ago

  • Related to QA Run #65856: wip-pdonnell-testing-20240508.150423-reef added
Actions #2

Updated by Patrick Donnelly 11 days ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 57373
Actions #3

Updated by Patrick Donnelly 11 days ago

  • Target version changed from v20.0.0 to v18.2.3
  • Backport deleted (squid,reef)

not an issue in main/squid

Actions #4

Updated by Patrick Donnelly 10 days ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF