mon/MDSMonitor: fix assert crash in `fs swap`

Paxos is plugged differently between main and reef.

Fixes: f11cf2b6dc5974d0e63d83f50e4e18e828df8e8e
Fixes: https://tracker.ceph.com/issues/65883
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>